# InnnovationDataExplorer

./: .gitignore  .replit  DataFormatter.md  README.md  pyproject.toml
.Trash-1000/info/: trend_optimizer.ipynb.trashinfo
DataAnalyzer/: DataAnalyzer.py  README.md  analysis_pipeline.py  analysis_test.py  analysis_will.py  pipeline_results_20250728_200927.csv  pipeline_results_20250728_200927.json  pipeline_results_20250728_201844.csv  pipeline_results_20250728_201844.json
DataAnalyzer/AICategorizerwiReRa/: categorizer.py  categorizer_old.py  dspy_categorizer.py  pyproject.toml
DataAnalyzer/AICategorizerwiReRa/attached_assets/: Pasted--async-def-process-sample-data-ProcessingResult-Process--1752690912259_1752690912262.txt  Pasted-async-def-process-sample-data-ProcessingResult-Process-sample-data-using-DSPy-Attachme-1752694480150_1752694480153.txt
DataAnalyzer/TrendFinder/: category_analysis.py  category_test.py  modules.py  test.py  trend_analysis (copy).py  trend_analysis.py  trend_optimizer.ipynb  trend_test.py
DataAnalyzer/TrendFinder/.ipynb_checkpoints/: trend_optimizer-checkpoint.ipynb
DataAnalyzer/TrendFinder/optimized_modules/: optimized_doc_analyzer.json
DataAnalyzer/TrendFinder/results/: category_analysis_20250730_004440.txt
DataAnalyzer/results/: pipeline_results_20250728_200532.csv  pipeline_results_20250728_200532.json
DataCollector/: .gitignore  README.md  datacollector.py  downloader.py  dspyfieldextractor.py  package-lock.json  package.json
DataFormatter/: README.md
mlflow/experiments/0/: meta.yaml
(+71 files in other folders)
