[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "attachments>=0.21.0",
    "dspy-ai==3.0.0b2",
    "google-auth>=2.40.3",
    "google>=3.0.0",
    "pandas>=2.3.1",
    "xmc>=0.0.1",
    "black>=25.1.0",
    "pypdf2>=3.0.1",
]
